--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <img src="take%20me%20back!.png"hei hight="100" width="200"></a>
         
         <center>
-               <img src="rebels.png" height="800" width="500"><br>
-             <p width="600"><font color="white">The rebel forces, once a mere nuisance, have grown into sizable threats that must be put down as soon as possible. Their ability to elude us, and sympathy from their respective countries has remained their greatest advantage, but a new strategy will soon remedy this.<br>
+               <img src="rebels.png" height="800" width="500">
+             <p><font color="white">The rebel forces, once a mere nuisance, have grown into sizable threats that must be put down as soon as possible. Their ability to elude us, and sympathy from their respective countries has remained their greatest advantage, but a new strategy will soon remedy this.<br>
 
 I would like to propose a process of infiltration not merely for purposes of intelligence gathering, but also to make these rebels as much a nuisance to the public as they are to us. I am proposing sabotage of a different variety. How troublesome would it be to the Fascists of Italy or the National Democrats of Poland if one of their own instigated a riot that destroyed the businesses and homes of a city? For them to develop a reputation for violence and abuse of citizens? There are many ways this could be achieved, but the first step is infiltration. We must have several agents join the ranks of rebels in Iberia, France, Italy, and Poland posthaste.</font> </p>
                <img src="Heisenberg.png" height="800" width="500"><br>
