--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 I would like to propose a process of infiltration not merely for purposes of intelligence gathering, but also to make these rebels as much a nuisance to the public as they are to us. I am proposing sabotage of a different variety. How troublesome would it be to the Fascists of Italy or the National Democrats of Poland if one of their own instigated a riot that destroyed the businesses and homes of a city? For them to develop a reputation for violence and abuse of citizens? There are many ways this could be achieved, but the first step is infiltration. We must have several agents join the ranks of rebels in Iberia, France, Italy, and Poland posthaste.</font> </p>
                <img src="Heisenberg.png" height="800" width="600"><br>
-             <p><font color="white">Extreme measures must be taken to keep mister Heisenberg out of the public eye, and under close protection. We are close approaching the final designs of a functional device which might put all other projects to rest.<br>
+             <p><font color="white" width="600">Extreme measures must be taken to keep mister Heisenberg out of the public eye, and under close protection. We are close approaching the final designs of a functional device which might put all other projects to rest.<br>
 We can not stress the urgency of Heisenburg's security. Without him there is not project, and none of the other projects are capable of providing us the immediate results necessary. That said, research should continue, as while such other projects will not be ready within schedule, I suspect many of them could bear even riper fruit if we are patient.</font> </p>
                <img src="the bell.png" height="800" width="600"><br>
              <p><font color="white">Hazards of the Bell.<br>
